# Arcticons-Linux

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  generate-all.sh  generate-assets.sh  generate-icons.toml  generate-manual.sh  icon-search.py  icon_search.py  icon_search.sh  index.theme  mapping.txt  mapping.yaml  pyproject.toml  requirements.txt  ruff.toml  validate_mapping.jq  validate_mapping.py
.github/workflows/: main.yaml
apps/: raster.sh
arcticons-dark/: index.theme
arcticons-light/: index.theme
freedesktop-theme/: mapping.txt
other/: raster.sh
scripts/: check_icon_duplicates.py  generate_icons.py  icon_search.py  sync_icons.py  validate_mapping.py
tools/: README.md  copysymlink.sh  git-dir.sh  raster.sh
