[project]
name = "freedesktop-theme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.3.0",
    "pyyaml>=6.0.2",
    "scour>=0.38.2",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "types-lxml>=2024.9.16",
]

[tool.ruff]
required-version = ">=0.6.8"
output-format = "concise"
target-version = "py312"
exclude = [".arcticons"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY001", # Missing copyright notice at top of file
    "D202",   # No blank lines allowed after function docstring
    "D203",   # 1 blank line required before class docstring
    "D213",   # Multi-line docstring summary should start at the second line
    "D406",   # Section name should end with a newline
    "D407",   # Section name underlining
    "DOC",    # pydoclint
    "E501",   # line too long
    "C901",   # Ignore all complexity checks
    "S320",

    "T201",   # print found

    # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "ISC001",
]
preview = true

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = false
